kubernetes/ns-kube-system/fluentd-elasticsearch-kibana/es-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
    version: v5.6.4
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  serviceName: elasticsearch-logging
  replicas: 2
  selector:
    matchLabels:
      k8s-app: elasticsearch-logging
      version: v5.6.4
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging
        version: v5.6.4
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: elasticsearch-logging
      containers:
      - image: harbor.past123.com/past123/elasticsearch:5.6.4
        name: elasticsearch-logging
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: elasticsearch-logging
          mountPath: /data
          subPath: elasticsearch-logging
      imagePullSecrets:
        - name: regsecret
      volumes:
      - name: elasticsearch-logging
        hostPath:
          path: /data/
          type: Directory
      # 需要给node打标签: kubectl label nodes cn-office-ops-zam04.past123.com beta.kubernetes.io/elasticsearch-ds-ready="true" 
      nodeSelector:
        beta.kubernetes.io/elasticsearch-ds-ready: "true"

      # Elasticsearch requires vm.max_map_count to be at least 262144.
      # If your OS already sets up this number to a higher value, feel free
      # to remove this init container.
