kubernetes/ns-kube-system/fluentd-elasticsearch-kibana/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ui
  namespace: kube-system
spec:
  rules:
  - host: logs.past123.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601
